client/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quick-client-service
  namespace: quick-client
spec:
  selector:
    app: quick-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
