client/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickshow-ingress
  namespace: quick-client
spec:
  rules:
    - host: quickshow.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quick-client-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: quick-server-service
                port:
                  number: 3000
